INCLUDE_DIRECTORIES(.. ../../serial)

ADD_EXECUTABLE(TuckerMPI_IO_test TuckerMPI_IO_test.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_IO_test mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_pack_data TuckerMPI_pack_data.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_pack_data mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_pack_data2 TuckerMPI_pack_data2.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_pack_data2 mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_pack_data3 TuckerMPI_pack_data3.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_pack_data3 mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_old_gram_test_large TuckerMPI_old_gram_test_file.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_old_gram_test_large mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_old_gram_test_small TuckerMPI_old_gram_test_file2.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_old_gram_test_small mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_new_gram_test_large TuckerMPI_new_gram_test_file.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_new_gram_test_large mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_new_gram_test_small TuckerMPI_new_gram_test_file2.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_new_gram_test_small mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_oldGram0 TuckerMPI_oldGram0.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_oldGram0 mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_bigGram0 TuckerMPI_bigGram0.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_bigGram0 mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_gram0 TuckerMPI_gram0.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_gram0 mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_gram1 TuckerMPI_gram1.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_gram1 mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_gram2 TuckerMPI_gram2.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_gram2 mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_ttm_test TuckerMPI_ttm_test.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_ttm_test mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_reconstruct_test TuckerMPI_reconstruct_test.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_reconstruct_test mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_norm_test TuckerMPI_norm_test.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_norm_test mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_normalize_test TuckerMPI_normalize_test.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_normalize_test mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_slice_test TuckerMPI_slice_test.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_slice_test mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_shift_scale_test TuckerMPI_shift_scale_test.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_shift_scale_test mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ADD_EXECUTABLE(TuckerMPI_ttm_test_file TuckerMPI_ttm_test_file.cpp)
TARGET_LINK_LIBRARIES(TuckerMPI_ttm_test_file mpi_tucker ${BLAS_LIBRARIES} ${LAPACK_LIBRARIES})

ENABLE_TESTING()
ADD_TEST(TuckerMPI_part_rec_test ${CMAKE_CURRENT_BINARY_DIR}/TuckerMPI_part_rec_test.pl "${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 12")
ADD_TEST(TuckerMPI_IO_test2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test3 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test5 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 5 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test6 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test7 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 7 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test9 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 9 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test10 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 10 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test11 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 11 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test12 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 12 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test13 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 13 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test14 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 14 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test15 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 15 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test16 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 16 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_IO_test24 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 24 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_IO_test)
ADD_TEST(TuckerMPI_packing_test ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_pack_data)
ADD_TEST(TuckerMPI_packing_test2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_pack_data2)
ADD_TEST(TuckerMPI_packing_test3 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_pack_data3)
ADD_TEST(TuckerMPI_old_gram_test_large2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large3 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large5 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 5 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large6 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large7 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 7 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large9 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 9 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large10 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 10 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large11 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 11 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large12 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 12 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large13 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 13 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large14 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 14 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large15 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 15 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large16 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 16 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_large24 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 24 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_large)
ADD_TEST(TuckerMPI_old_gram_test_small2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small3 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small5 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 5 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small6 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small7 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 7 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small9 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 9 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small10 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 10 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small11 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 11 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small12 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 12 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small13 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 13 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small14 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 14 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small15 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 15 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small16 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 16 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_old_gram_test_small24 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 24 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_old_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_large2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large3 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large5 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 5 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large6 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large7 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 7 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large9 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 9 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large10 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 10 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large11 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 11 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large12 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 12 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large13 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 13 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large14 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 14 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large15 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 15 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large16 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 16 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_large24 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 24 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_large)
ADD_TEST(TuckerMPI_new_gram_test_small2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small3 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small5 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 5 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small6 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small7 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 7 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small9 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 9 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small10 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 10 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small11 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 11 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small12 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 12 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small13 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 13 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small14 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 14 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small15 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 15 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small16 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 16 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_new_gram_test_small24 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 24 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_new_gram_test_small)
ADD_TEST(TuckerMPI_oldGram0 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_oldGram0)
ADD_TEST(TuckerMPI_bigGram0 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_bigGram0)
ADD_TEST(TuckerMPI_gram0 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_gram0)
ADD_TEST(TuckerMPI_gram1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_gram1)
ADD_TEST(TuckerMPI_gram2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_gram2)
ADD_TEST(TuckerMPI_ttm_test ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test)
ADD_TEST(TuckerMPI_reconstruct_test ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_reconstruct_test)
ADD_TEST(TuckerMPI_norm_test2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test3 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test5 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 5 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test6 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test7 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 7 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test9 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 9 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test10 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 10 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test11 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 11 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test12 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 12 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test13 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 13 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test14 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 14 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test15 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 15 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test16 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 16 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_norm_test24 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 24 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_norm_test)
ADD_TEST(TuckerMPI_normalize_test2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test3 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test5 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 5 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test6 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test7 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 7 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test9 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 9 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test10 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 10 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test11 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 11 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test12 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 12 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test13 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 13 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test14 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 14 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test15 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 15 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test16 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 16 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_normalize_test24 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 24 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_normalize_test)
ADD_TEST(TuckerMPI_slice_test2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test3 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test5 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 5 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test6 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test7 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 7 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test9 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 9 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test10 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 10 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test11 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 11 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test12 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 12 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test13 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 13 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test14 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 14 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test15 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 15 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test16 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 16 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_slice_test24 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 24 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_slice_test)
ADD_TEST(TuckerMPI_shift_scale_test2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test3 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test5 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 5 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test6 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test7 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 7 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test9 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 9 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test10 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 10 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test11 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 11 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test12 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 12 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test13 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 13 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test14 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 14 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test15 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 15 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test16 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 16 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_shift_scale_test24 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 24 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_shift_scale_test)
ADD_TEST(TuckerMPI_ttm_test_file2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file3 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 3 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file5 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 5 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file6 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 6 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file7 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 7 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file9 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 9 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file10 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 10 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file11 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 11 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file12 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 12 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file13 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 13 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file14 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 14 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file15 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 15 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file16 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 16 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)
ADD_TEST(TuckerMPI_ttm_test_file24 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 24 ${CMAKE_CURRENT_BINARY_DIR}/${EXECUTABLE_OUTPUT_PATH}/TuckerMPI_ttm_test_file)

SET_PROPERTY(TEST TuckerMPI_part_rec_test PROPERTY LABELS SystemTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test2 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_IO_test3 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_IO_test4 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_IO_test5 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test6 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test7 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test8 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test9 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test10 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test11 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test12 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test13 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test14 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test15 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test16 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_IO_test24 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large2 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large3 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large4 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large5 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large6 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large7 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large8 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large9 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large10 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large11 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large12 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large13 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large14 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large15 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large16 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_large24 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small2 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small3 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small4 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small5 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small6 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small7 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small8 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small9 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small10 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small11 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small12 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small13 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small14 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small15 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small16 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_old_gram_test_small24 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large2 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large3 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large4 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large5 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large6 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large7 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large8 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large9 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large10 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large11 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large12 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large13 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large14 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large15 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large16 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_large24 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small2 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small3 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small4 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small5 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small6 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small7 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small8 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small9 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small10 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small11 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small12 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small13 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small14 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small15 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small16 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_new_gram_test_small24 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test2 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_norm_test3 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_norm_test4 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_norm_test5 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test6 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test7 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test8 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test9 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test10 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test11 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test12 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test13 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test14 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test15 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test16 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_norm_test24 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test2 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_normalize_test3 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_normalize_test4 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_normalize_test5 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test6 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test7 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test8 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test9 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test10 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test11 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test12 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test13 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test14 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test15 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test16 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_normalize_test24 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test2 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_slice_test3 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_slice_test4 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_slice_test5 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test6 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test7 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test8 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test9 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test10 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test11 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test12 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test13 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test14 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test15 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test16 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_slice_test24 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test2 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test3 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test4 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test5 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test6 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test7 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test8 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test9 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test10 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test11 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test12 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test13 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test14 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test15 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test16 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_shift_scale_test24 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file2 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file3 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file4 PROPERTY LABELS UnitTest)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file5 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file6 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file7 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file8 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file9 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file10 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file11 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file12 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file13 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file14 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file15 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file16 PROPERTY LABELS UnitTest ManyProcs)
SET_PROPERTY(TEST TuckerMPI_ttm_test_file24 PROPERTY LABELS UnitTest ManyProcs)

SET(CMAKE_TUCKER_BINARY_INPUT_DIR ${CMAKE_CURRENT_BINARY_DIR}/input_files CACHE INTERNAL "directory of binary input files")
FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/input_files)
FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/output_files)
FILE(COPY "${CMAKE_CURRENT_SOURCE_DIR}/TuckerMPI_part_rec_test.pl" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/input_test_filenames.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/input_test_filename.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/output_test_filenames.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/output_test_filename.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/io_file0.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/io_file1.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/io_file2.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/io_file3.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/io_file4.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/io_file5.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/io_file6.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/io_file7.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/io_file8.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/io_file9.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/io_file10.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/3x2.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/4x3.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/5x8.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/2x5.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/7x1.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/1x7.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/11x25.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/17x11.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/tensor24.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/tensor36.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/tensor64.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/ttm_data.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/ttm_result0.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/ttm_result0t.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/ttm_result1.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/ttm_result1t.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/ttm_result2.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/ttm_result2t.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files")

FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/reconstruction/rec.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files/reconstruction")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/reconstruction/paramfile.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files/reconstruction")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/reconstruction/sthosvd_ranks.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files/reconstruction")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/reconstruction/sthosvd_size.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files/reconstruction")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/reconstruction/sthosvd_core.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files/reconstruction")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/reconstruction/sthosvd_mat_0.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files/reconstruction")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/reconstruction/sthosvd_mat_1.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files/reconstruction")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/reconstruction/sthosvd_mat_2.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files/reconstruction")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/reconstruction/sthosvd_mat_3.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files/reconstruction")
FILE(COPY "${CMAKE_SOURCE_DIR}/input_files/reconstruction/reconstructed.txt" DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/input_files/reconstruction")
